[gd_scene load_steps=6 format=3 uid="uid://btx7xwf52mffb"]

[ext_resource type="Script" uid="uid://c4f6ra2u01y78" path="res://scripts/ui/recipe_button_scene.gd" id="1_fep5j"]
[ext_resource type="Texture2D" uid="uid://b8cckow3na0pq" path="res://scenes/ui/kenney_ui-pack-rpg-expansion/PNG/buttonSquare_brown.png" id="2_4nrrg"]
[ext_resource type="Texture2D" uid="uid://dmbquitnmj5ib" path="res://scenes/ui/kenney_ui-pack-rpg-expansion/PNG/buttonSquare_brown_pressed.png" id="3_l5dfs"]
[ext_resource type="Script" uid="uid://bec0i5lj72tyd" path="res://scripts/ui/button_hover_effect.gd" id="4_h1pr2"]
[ext_resource type="Texture2D" uid="uid://b4xcbs6kix3cu" path="res://assets/food/tomato cut.png" id="5_fep5j"]

[node name="RecipeButton" type="MarginContainer"]
custom_minimum_size = Vector2(64, 64)
anchors_preset = -1
anchor_right = 0.194
anchor_bottom = 0.069
offset_right = -184.32
offset_bottom = 14.32
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_fep5j")

[node name="ItemButton" type="TextureButton" parent="."]
layout_mode = 2
texture_normal = ExtResource("2_4nrrg")
texture_pressed = ExtResource("3_l5dfs")
stretch_mode = 5
script = ExtResource("4_h1pr2")

[node name="ItemSprite" type="TextureRect" parent="ItemButton"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_right = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_fep5j")
expand_mode = 3

[connection signal="mouse_entered" from="ItemButton" to="." method="play_button_hover_sfx"]
[connection signal="pressed" from="ItemButton" to="." method="_on_name_button_pressed"]
